# flint-forge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  RUST_ASSESSMENT.md  SECURITY.md  SUPPORT.md  ai-agent-platform-comparison.md  cliff.toml  dagger.json  debug.sh  debug_query.sql  deny.toml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  generate_showcase.py  htmx-alpine-animations-research.md  research-wasm-sandboxing-comparison.md  rust-toolchain.toml  ui-patterns-research-brief.md
crates/ext-flint-auth/: Cargo.toml  README.md  ext-flint-auth.control
crates/ext-flint-auth/sql/: flint_auth.sql
crates/ext-flint-auth/src/: lib.rs
crates/ext-flint-hooks/: Cargo.toml  README.md  ext-flint-hooks.control
crates/ext-flint-hooks/sql/: flint_hooks.sql
crates/ext-flint-hooks/src/: lib.rs
crates/ext-flint-llm/: Cargo.toml  flint_llm.control
crates/ext-flint-llm/sql/: flint_llm.sql
crates/ext-flint-llm/src/: credentials.rs  error.rs  gate_client.rs  governor.rs  jobs.rs  lib.rs  sync.rs  templates.rs  worker.rs  writeback.rs
crates/ext-flint-meta/: Cargo.toml  ext-flint-meta.control
crates/ext-flint-meta/sql/: flint_meta.sql
crates/ext-flint-meta/src/: agui.rs  functions.rs  keto.rs  lib.rs  schema.rs  triggers.rs  vault_meta.rs  version.rs
crates/ext-flint-vault/: Cargo.toml  flint_vault.control
crates/ext-flint-vault/.cargo/: config.toml
crates/ext-flint-vault/src/: lib.rs
crates/ext-flint-vault/tests/: backup_restore.sh
crates/fdb-app/: Cargo.toml
crates/fdb-app/benches/: design_md_parser.rs
crates/fdb-app/src/: lib.rs
crates/fdb-app/src/a2ui/: design_md_parser.rs  mod.rs  types.rs
crates/fdb-app/src/a2ui/design_md_parser/: mod.rs  (+5 more)
crates/fdb-app/src/graphql/: introspection.rs  mod.rs
crates/fdb-app/tests/: gate_tests.rs  keto_check_test.rs  meta_listener.rs
crates/fdb-gateway/: Cargo.toml
crates/fdb-gateway/src/: a2ui_embedder.rs  agui_hook_dispatcher.rs  bootstrap.rs  gateway_tests.rs  graphql.rs  handlers.rs  keto_sync.rs  lib.rs  main.rs  policy_source.rs  realtime_source.rs  rls_layer.rs  subscriptions.rs  telemetry.rs
crates/fdb-gateway/src/routes/: a2a.rs  a2ui.rs  agui.rs  design_import.rs  mcp.rs  mod.rs
crates/fdb-gateway/tests/: a2ui_application_model_test.rs  a2ui_embedder_test.rs  a2ui_schema_test.rs  a2ui_seed_test.rs  a2ui_trigger_test.rs  gateway_startup_live_pg.rs  mounts_reflection_router.rs  rest_rls_isolation.rs  rest_router_extraction.rs  skill_catalog_test.rs
crates/fdb-ports/: Cargo.toml
crates/fdb-ports/src/: keto.rs  lib.rs
crates/fdb-postgres/: Cargo.toml
crates/fdb-postgres/src/: backend.rs  conn.rs  error.rs  graphql.rs  lib.rs  rest.rs  vector_rpc.rs
crates/fdb-postgres/tests/: graphql_live_pg.rs  pgrest_live_pg.rs
crates/fdb-query/: Cargo.toml
crates/fdb-query/src/: cast.rs  clause.rs  filter.rs  fts.rs  ident.rs  lib.rs  mutation.rs  operator.rs  param.rs  plan.rs
crates/fdb-query/src/embed/: mod.rs  parse.rs  render.rs  schema.rs  tests.rs
crates/fdb-query/src/operator/: mod.rs  render.rs  tests.rs
crates/fdb-query/src/plan/: mod.rs  parse.rs  tests.rs
crates/fdb-query/tests/: edge_cases.rs
crates/fdb-realtime/: Cargo.toml
crates/fdb-realtime/src/: lib.rs  listen.rs
crates/fdb-realtime/src/listen/: config.rs  error.rs  listen_loop.rs  mod.rs  payload.rs  source.rs  tests.rs  validate.rs  watch.rs
crates/fdb-realtime/tests/: listen_live_pg.rs
crates/fdb-reflection/: Cargo.toml
crates/fdb-reflection/benches/: mcp_compiler.rs
crates/fdb-reflection/src/: compiled.rs  engine.rs  error.rs  lib.rs  model.rs  state_manager.rs
crates/fdb-reflection/src/compilers/: a2ui.rs  embed_schema.rs  filters.rs  graphql.rs  mcp.rs  mod.rs  openapi.rs  rest.rs
crates/fdb-reflection/src/passes/: endpoint_generation.rs  mod.rs  normalization.rs  permission_analysis.rs  validation.rs
crates/fdb-reflection/tests/: embedding_live_pg.rs  pgvector_rpc.rs  rest_filter_safety_gate.rs  rest_typed_columns_live_pg.rs  vault_dek_serde_gate.rs
crates/fke-registry/: Cargo.toml
crates/fke-registry/src/: lib.rs
crates/fke-runtime/: Cargo.toml
crates/fke-runtime/src/: capability.rs  compiler.rs  db_host.rs  helpers.rs  host_bindings.rs  identity_host.rs  kv_host.rs  lib.rs  llm_host.rs  secrets.rs  types.rs
crates/fke-runtime/src/runtime/: mod.rs  tests.rs
crates/fke-server/: Cargo.toml
crates/fke-server/src/: kiln_bgw.rs  kiln_db_policy.rs  kiln_policy.rs  main.rs  state.rs  tests.rs
crates/fke-server/src/handlers/: admin.rs  health.rs  invoke.rs  mod.rs
crates/fke-sign-cosign/: Cargo.toml
crates/fke-sign-cosign/src/: chain.rs  identity.rs  lib.rs  sct.rs
crates/fke-sign-did/: Cargo.toml
crates/fke-sign-did/src/: lib.rs  tests.rs
crates/fke-store-fs/: Cargo.toml
crates/fke-store-fs/src/: lib.rs
crates/fke-store-ipfs/: Cargo.toml
crates/fke-store-ipfs/src/: lib.rs
crates/fke-store-ipfs/tests/: integration.rs
crates/fke-store-oci/: Cargo.toml
crates/fke-store-oci/src/: lib.rs
crates/fke-store-oci/tests/: integration.rs
crates/fke-store-s3/: Cargo.toml
crates/fke-store-s3/src/: lib.rs
crates/fke-store-s3/tests/: integration.rs
crates/flint-skill/: Cargo.toml  README.md
crates/flint-skill/src/: db.rs  error.rs  identity.rs  kv.rs  lib.rs  llm.rs  secrets.rs  types.rs
crates/flint-skill/tests/: integration.rs
crates/forge-cli/: Cargo.toml  Dockerfile
crates/forge-cli/src/: cli.rs  container.rs  main.rs
crates/forge-cli/src/commands/: hook.rs  migrate.rs  mod.rs  register.rs  token.rs
crates/forge-identity/: Cargo.toml
crates/forge-identity/src/: error.rs  jwks.rs  lib.rs
crates/forge-identity/tests/: audience_missing_fails_closed.rs  audience_wrong_rejected.rs  jwks_refetch_rate_limit.rs  jwks_rotation.rs
crates/forge-identity/tests/common/: mod.rs
crates/forge-policy/: Cargo.toml
crates/forge-policy/src/: a2ui.rs  cedar.rs  kiln.rs  lib.rs
examples/hello-component/: Cargo.toml
examples/hello-component/src/: bindings.rs  lib.rs
(+868 files in other folders)
