[workspace]
resolver = "2"
members = [
  "crates/forge-domain", "crates/forge-identity", "crates/forge-policy",
  "crates/fdb-domain", "crates/fdb-ports", "crates/fdb-app", "crates/fdb-postgres", "crates/fdb-query",
  "crates/fdb-realtime", "crates/fdb-auth", "crates/fdb-reflection", "crates/fdb-gateway",
  "crates/fke-domain", "crates/fke-ports", "crates/fke-runtime",
  "crates/fke-store-oci", "crates/fke-store-ipfs", "crates/fke-store-s3", "crates/fke-store-fs",
  "crates/fke-sign-did", "crates/fke-sign-cosign", "crates/fke-registry", "crates/fke-server",
  "crates/forge-cli", "examples/hello-component",
  "crates/flint-skill",
]
# pgrx extensions are built with `cargo pgrx`, not the default workspace build, so they
# are excluded here to keep `cargo check` green without a Postgres toolchain present.
exclude = ["crates/ext-flint-auth", "crates/ext-flint-hooks", "crates/ext-flint-llm", "crates/ext-flint-vault", "crates/ext-flint-meta"]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["Prometheus AGS"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
arc-swap = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "json", "migrate"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
bytes = "1"
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-graphql-axum = "7"
tonic = { version = "0.12", features = ["transport"] }
pgvector = { version = "0.4", features = ["postgres", "sqlx"] }
cedar-policy = "4"
wiremock = "0.6"
# WASM Component Model runtime (Kiln data-plane). Compiler feature adds Cranelift AOT.
# p10-c003: Upgraded 26→46 to resolve RUSTSEC-2026-0095/0096 (CVSS 9.0) and all
# wasmtime-suite advisories. wasmtime uses calendar versioning; component-model
# and async APIs are stable across this range.
# `anyhow` feature: wasmtime 40+ made anyhow optional; re-enable it so
# wasmtime::Error = anyhow::Error and .context() calls in fke-runtime continue to work.
wasmtime = { version = "46", features = ["component-model", "async", "pooling-allocator", "anyhow"] }
wasmtime-wasi = "46"
wasmtime-wasi-http = "46"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zip = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
x509-cert = { version = "0.2", features = ["pem", "std"] }
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
# p10-c003: Upgraded 0.11→0.14 to resolve RUSTSEC-2026-0194/0195 (CVSS 7.5,
# quick-xml via object_store 0.11). object_store 0.14 uses quick-xml >=0.41.
object_store = { version = "0.14", features = ["aws"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["cncf_distribution", "minio"] }
# p9-c003: Per-IP token-bucket rate limiting via tower_governor.
# Disable the default "tonic" feature to avoid a version conflict with workspace tonic = "0.12".
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
criterion = { version = "0.5", features = ["html_reports"] }
# p9-c005: Security response headers middleware (X-Content-Type-Options, X-Frame-Options, etc.).
tower-http = { version = "0.6", features = ["set-header"] }
# p9-c004: Observability — Prometheus metrics, OTLP tracing, structured spans.
# axum-prometheus: Axum tower middleware emitting http_requests_total + duration histograms.
# opentelemetry-otlp uses the http-json transport (reqwest) to avoid tonic version conflicts.
axum-prometheus = "0.10"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-json", "reqwest-client"] }
tracing-opentelemetry = "0.33"

# Compile Economy — dev-loop build settings. See docs/RUST-DEVELOPMENT-MANAGEMENT.md.
# Cargo only reads profiles from the workspace-root manifest, so they live here.
[profile.dev]
opt-level = 0                    # our crates: fast to compile, fully debuggable
debug = "line-tables-only"       # backtraces without the full debuginfo the linker must carry
incremental = true               # default for dev; stated for intent

[profile.dev.package."*"]
opt-level = 1                    # optimize deps once (rarely change); 1 avoids the 2/3 monomorph-sharing penalty

# Release stays fully optimized — untouched for production builds.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[workspace.lints.clippy]
# Pedantic is the CI gate (run with -D warnings). Allows below are scaffold-stage
# concessions, each to be revisited as the todo!() bodies are implemented.
pedantic = { level = "warn", priority = -1 }
doc_markdown       = "allow"  # domain vocabulary: flint-gate, pg_graphql, pgvector, WatchEntityType, ProxyPre
missing_errors_doc = "allow"  # Result-returning stubs; "# Errors" docs land with the implementations
missing_panics_doc = "allow"  # todo!() stubs panic by definition until implemented
must_use_candidate = "allow"  # premature on scaffolding
