[workspace]
resolver = "2"
members = [
  "crates/forge-domain", "crates/forge-identity", "crates/forge-policy",
  "crates/fdb-domain", "crates/fdb-ports", "crates/fdb-app", "crates/fdb-postgres", "crates/fdb-query",
  "crates/fdb-realtime", "crates/fdb-auth", "crates/fdb-reflection", "crates/fdb-gateway",
  "crates/fke-domain", "crates/fke-ports", "crates/fke-runtime",
  "crates/fke-store-oci", "crates/fke-store-ipfs", "crates/fke-store-s3", "crates/fke-store-fs",
  "crates/fke-sign-did", "crates/fke-sign-cosign", "crates/fke-registry", "crates/fke-server",
  "crates/forge-cli", "examples/hello-component",
  "crates/flint-skill",
]
# pgrx extensions are built with `cargo pgrx`, not the default workspace build, so they
# are excluded here to keep `cargo check` green without a Postgres toolchain present.
exclude = ["crates/ext-flint-auth", "crates/ext-flint-hooks", "crates/ext-flint-llm", "crates/ext-flint-vault", "crates/ext-flint-meta"]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["Prometheus AGS"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
arc-swap = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "uuid", "json", "migrate"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
bytes = "1"
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-graphql-axum = "7"
# p16-c009: tonic 0.13+ depends on axum ^0.8 / tower ^0.5, matching our own
# workspace pins (axum 0.8, tower via tower-http/tower_governor) and eliminating
# axum/axum-core/tower/matchit duplicate-version entries that tonic 0.12's
# axum ^0.7 / tower ^0.4.7 pins used to cause. fdb-realtime only uses
# `tonic::transport::Channel` (client-side gRPC), an API unchanged across 0.12-0.13.
tonic = { version = "0.13", features = ["transport"] }
pgvector = { version = "0.4", features = ["postgres", "sqlx"] }
cedar-policy = "4"
wiremock = "0.6"
# WASM Component Model runtime (Kiln data-plane). Compiler feature adds Cranelift AOT.
# p10-c003: Upgraded 26→46 to resolve RUSTSEC-2026-0095/0096 (CVSS 9.0) and all
# wasmtime-suite advisories. wasmtime uses calendar versioning; component-model
# and async APIs are stable across this range.
# `anyhow` feature: wasmtime 40+ made anyhow optional; re-enable it so
# wasmtime::Error = anyhow::Error and .context() calls in fke-runtime continue to work.
wasmtime = { version = "46", features = ["component-model", "async", "pooling-allocator", "anyhow"] }
wasmtime-wasi = "46"
wasmtime-wasi-http = "46"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zip = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
# p16-c002: Fulcio intermediate/root CA certs are P-384 (leaf certs are P-256).
p384 = { version = "0.13", features = ["ecdsa"] }
x509-cert = { version = "0.2", features = ["pem", "std", "sct"] }
# p16-c005: test-only ES256 keypair generation for JWKS-rotation integration tests
# (already a transitive dep of jsonwebtoken's "use_pem"/ring backend).
ring = "0.17"
# p16-c002: OID matching (Fulcio identity extensions) and SPKI DER encoding
# (SCT issuer_key_hash) independent of x509-cert's re-exports.
const-oid = "0.9"
spki = { version = "0.7", features = ["alloc", "pem"] }
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
# p10-c003: Upgraded 0.11→0.14 to resolve RUSTSEC-2026-0194/0195 (CVSS 7.5,
# quick-xml via object_store 0.11). object_store 0.14 uses quick-xml >=0.41.
object_store = { version = "0.14", features = ["aws"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["cncf_distribution", "minio"] }
# p9-c003: Per-IP token-bucket rate limiting via tower_governor.
# Disable the default "tonic" feature to avoid a version conflict with workspace tonic = "0.12".
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
criterion = { version = "0.5", features = ["html_reports"] }
# p9-c005: Security response headers middleware (X-Content-Type-Options, X-Frame-Options, etc.).
tower-http = { version = "0.6", features = ["set-header"] }
# p9-c004: Observability — Prometheus metrics, OTLP tracing, structured spans.
# axum-prometheus: Axum tower middleware emitting http_requests_total + duration histograms.
# opentelemetry-otlp uses the http-json transport (reqwest) to avoid tonic version conflicts.
axum-prometheus = "0.10"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-json", "reqwest-client"] }
tracing-opentelemetry = "0.33"

# Known dependency duplicates (p16-c009)
#
# `cargo tree --workspace --duplicates` still reports these after the tonic
# 0.12→0.13 convergence (which removed the axum 0.7/0.8, axum-core, tower
# 0.4/0.5, matchit, and indexmap 1/2 duplicates). Each remaining group below
# is pinned by third-party crates we depend on but do not control the
# transitive version choice of, OR is a same-side major bump whose behavior
# change (not just compile error) is out of scope for a dependency-dedup
# pass. No `[patch]` section or vendored fork has been introduced for any of
# these — re-evaluate individually if/when upstream converges.
#
# - jsonwebtoken 9 (our pin) vs 10 (oci-client, ^10.3): 10.0.0 is a breaking
#   release that replaces jsonwebtoken's previously-hardcoded `ring` backend
#   with a chosen `aws_lc_rs`/`rust_crypto` feature — a real behavior change
#   to the JWT sign/verify path feeding forge-identity's RLS context. Needs
#   its own reviewed change, not a bulk bump here.
# - reqwest 0.12 (our pin) vs 0.13 (object_store, oci-client,
#   opentelemetry-otlp all require ^0.13): 0.13.0 renames the `rustls-tls`
#   feature to `rustls` AND switches the default rustls crypto provider from
#   `ring` to `aws-lc-rs` — a real TLS-behavior change across every outbound
#   HTTPS client in the workspace (Keto check, sigstore Fulcio/Rekor calls,
#   JWKS fetch, IPFS upload). Needs its own reviewed change.
# - digest 0.10 vs 0.11 (and its dependents: block-buffer, const-oid,
#   cpufeatures, crypto-common, hmac, md-5, sha2, typenum): ed25519-dalek,
#   the elliptic-curve family (p256/p384, used for Fulcio cert validation),
#   and zip's aes/pbkdf2 chain all still pin the digest 0.10 RustCrypto
#   generation, while postgres-protocol (transitive via tokio-postgres) has
#   moved to digest 0.11. Converging means major-bumping security-sensitive
#   signing/crypto crates (ed25519-dalek 2→3, zip 2→9.0.0-pre2 which is not
#   even a stable release) — out of scope here.
# - darling 0.20 vs 0.23 (and darling_core/darling_macro): oci-spec (via our
#   oci-client dep) pins `derive_builder ^0.20` → darling 0.20; async-graphql
#   internally requires `handlebars` (also on derive_builder 0.20 — removing
#   it doesn't help since oci-spec's edge remains); async-graphql-derive and
#   serde_with pin darling 0.23 directly. oci-spec has no newer release off
#   derive_builder 0.20; no workspace lever forces convergence.
# - prost 0.13 vs 0.14: tonic (even at 0.13.1) still requires prost ^0.13;
#   opentelemetry-otlp/opentelemetry-proto require prost ^0.14. tonic 0.14
#   drops its bundled prost dependency but is a larger, unverified jump not
#   taken in this pass.
# - fixedbitset 0.4/0.5, petgraph 0.6/0.7: wasmtime's own wasm-compose
#   tooling pins petgraph 0.6.5/fixedbitset 0.4.2; lalrpop (a build-dependency
#   of cedar-policy-core's parser generator) pins petgraph 0.7.1/fixedbitset
#   0.5.7. Both internal to their respective toolchains, unrelated to us.
# - foldhash 0.1/0.2, hashbrown 0.14/0.15/0.16/0.17: sqlx-core (via hashlink)
#   pins hashbrown ~0.15; dashmap (via governor, tower_governor's rate
#   limiter) pins hashbrown 0.14.5; the wasmtime/indexmap-2.14 ecosystem uses
#   0.16/0.17. sqlx 0.9.0 exists but a major bump of the core Postgres
#   adapter is out of scope for this pass.
# - getrandom 0.2/0.3/0.4, rand 0.8/0.9/0.10 (and rand_core/rand_chacha):
#   ring (via jsonwebtoken 9/rustls) uses getrandom 0.2/rand 0.8; governor/
#   metrics-util/opentelemetry_sdk/tungstenite use getrandom 0.3/rand 0.9;
#   uuid/tempfile/chacha20 use getrandom 0.4/rand 0.10. Three independent
#   upstream generations; no single lever converges all three.
# - itertools 0.10/0.14/0.15: criterion (dev-only bench harness) bundles
#   itertools 0.10; cedar-policy/lalrpop/wasmtime-internal-cranelift use
#   0.14; object_store uses 0.15. Checked: criterion's latest (0.8.2) uses
#   itertools ^0.13, which would add a *fourth* version rather than
#   converging — not worth the bench-API churn for zero net reduction.
# - nonempty 0.7/0.12, thiserror 1/2 (partial): tower_governor's
#   forwarded-header-value 0.1.1 (latest release) pins nonempty 0.7 and
#   thiserror 1; cedar-policy-core pins nonempty 0.12 and our own workspace
#   thiserror is already "2". forwarded-header-value has had no release
#   since 0.1.1; no lever.
# - wasm-encoder 0.251/0.252, wast 35.0.2/252.0.0, object 0.37/0.39,
#   phf_shared 0.11/0.13, spin 0.9/0.10, unicode-width 0.1/0.2,
#   untrusted 0.7/0.9, webpki-roots 0.26/1.0, whoami 1.6/2.1,
#   winnow 0.7/1.0 + toml_datetime 0.7/1.1: each is an internal version split
#   between two third-party crates we depend on (wasmtime's own bundled
#   wasm-tools/toml/webpki-roots versions vs. sibling crates like
#   lalrpop/tokio-postgres/sqlx/aws-lc-rs/rustls-webpki), with no workspace
#   dependency of ours exposing a version knob for either side.

# Compile Economy — dev-loop build settings. See docs/RUST-DEVELOPMENT-MANAGEMENT.md.
# Cargo only reads profiles from the workspace-root manifest, so they live here.
[profile.dev]
opt-level = 0                    # our crates: fast to compile, fully debuggable
debug = "line-tables-only"       # backtraces without the full debuginfo the linker must carry
incremental = true               # default for dev; stated for intent

[profile.dev.package."*"]
opt-level = 1                    # optimize deps once (rarely change); 1 avoids the 2/3 monomorph-sharing penalty

# Release stays fully optimized — untouched for production builds.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[workspace.lints.clippy]
# Pedantic is the CI gate (run with -D warnings). Allows below are scaffold-stage
# concessions, each to be revisited as the todo!() bodies are implemented.
pedantic = { level = "warn", priority = -1 }
doc_markdown       = "allow"  # domain vocabulary: flint-gate, pg_graphql, pgvector, WatchEntityType, ProxyPre
missing_errors_doc = "allow"  # Result-returning stubs; "# Errors" docs land with the implementations
missing_panics_doc = "allow"  # todo!() stubs panic by definition until implemented
must_use_candidate = "allow"  # premature on scaffolding
