[package]
name = "ext-flint-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.12"

[dev-dependencies]
pgrx-tests = "0.12"
