[package]
name = "ext-flint-hooks"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Flint Forge hooks extension — webhook dispatch registry and outbox."
# Built standalone in the Docker anvil stage (no workspace root present), so no
# workspace inheritance here. pgrx 0.18.1 requires rustc >= 1.96.

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.18.1"

[dev-dependencies]
pgrx-tests = "=0.18.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
