[package]
name = "flint_llm"
version = "0.1.0"
edition = "2021"
license = "MIT"
# Built standalone in the Docker anvil stage (no workspace root present), so no
# workspace inheritance here. pgrx 0.18.1 requires rustc >= 1.96 (builder base matches).

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.18.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
tracing = "0.1"

[dev-dependencies]
pgrx-tests = "=0.18.1"
