[package]
name = "ext-flint-meta"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Flint Forge schema-cache layer for the flint_meta extension. Holds pre-computed catalog tables that the Rust reflection engine reads instead of querying pg_catalog directly."

# Built standalone with `cargo pgrx` (no workspace root present) → no inheritance.

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.18.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pgrx-tests = "=0.18.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
