[package]
name = "fdb-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fdb-domain = { path = "../fdb-domain" }
fdb-ports = { path = "../fdb-ports" }
forge-identity = { path = "../forge-identity" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "json"] }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
