[package]
name = "fdb-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fdb-gateway"
path = "src/main.rs"

[dependencies]
fdb-app = { path = "../fdb-app" }
fdb-ports = { path = "../fdb-ports" }
fdb-postgres = { path = "../fdb-postgres" }
fdb-realtime = { path = "../fdb-realtime" }
fdb-auth = { path = "../fdb-auth" }
fdb-reflection = { path = "../fdb-reflection" }
forge-identity = { path = "../forge-identity" }
sqlx = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
fdb-domain = { path = "../fdb-domain" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

[lints]
workspace = true
