[package]
name = "fdb-ports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fdb-domain = { path = "../fdb-domain" }
fdb-query  = { path = "../fdb-query" }
forge-domain = { path = "../forge-domain" }
forge-identity = { path = "../forge-identity" }
async-trait = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
