[package]
name = "fdb-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fdb-domain = { path = "../fdb-domain" }
fdb-ports = { path = "../fdb-ports" }
fdb-query = { path = "../fdb-query" }
forge-domain = { path = "../forge-domain" }
forge-identity = { path = "../forge-identity" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
thiserror = { workspace = true }
pgvector = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
