[package]
name = "fdb-realtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fdb-domain = { path = "../fdb-domain" }
fdb-ports = { path = "../fdb-ports" }
forge-identity = { path = "../forge-identity" }
async-trait = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
