[package]
name = "fdb-reflection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fdb-domain  = { path = "../fdb-domain" }
fdb-ports   = { path = "../fdb-ports" }
forge-domain = { path = "../forge-domain" }
async-graphql = { workspace = true }
futures = { workspace = true }

sqlx       = { workspace = true }
pgvector   = { workspace = true }
axum       = { workspace = true }
arc-swap   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
