[package]
name = "fke-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
