[package]
name = "fke-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
fdb-ports = { path = "../fdb-ports" }
forge-policy = { path = "../forge-policy" }
forge-identity = { path = "../forge-identity" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
# p14-c005: Custom Kiln counters emitted during Wasm invocation.
metrics = "0.24"

[features]
default = []
# Cranelift AOT compiler — present only in the Kiln control-plane build.
compiler = ["wasmtime/cranelift"]

[lints]
workspace = true
