[package]
name = "fke-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fke-server"
path = "src/main.rs"

[features]
default = []
# control plane ships the Cranelift compiler; data plane does not.
control-plane = ["fke-runtime/compiler"]

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
fke-runtime = { path = "../fke-runtime" }
fke-registry = { path = "../fke-registry" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
