[package]
name = "fke-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fke-server"
path = "src/main.rs"

[features]
default = []
# control plane ships the Cranelift compiler; data plane does not.
control-plane = ["fke-runtime/compiler"]

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
fke-runtime = { path = "../fke-runtime" }
fke-registry = { path = "../fke-registry" }
fke-sign-did = { path = "../fke-sign-did" }
fke-sign-cosign = { path = "../fke-sign-cosign" }
fdb-auth = { path = "../fdb-auth" }
forge-identity = { path = "../forge-identity" }
forge-policy = { path = "../forge-policy" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
# p14-c005: Prometheus /metrics endpoint and custom Kiln counters.
axum-prometheus = { workspace = true }
metrics = "0.24"

[dev-dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
