[package]
name = "fke-sign-cosign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
p256 = { workspace = true }
serde_json = { workspace = true }
x509-cert = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
