[package]
name = "fke-store-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
