[package]
name = "fke-store-ipfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
integration = []

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
async-trait = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
