[package]
name = "fke-store-oci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
integration = []

[dependencies]
fke-domain = { path = "../fke-domain" }
fke-ports = { path = "../fke-ports" }
async-trait = { workspace = true }
anyhow = { workspace = true }
oci-client = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
