[package]
name = "flint-skill"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Ergonomic Rust SDK for authoring Flint Kiln edge-function skills"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Only the minimal async test harness; the crate itself has no async runtime.
tokio = { workspace = true }

[lib]
crate-type = ["rlib"]

[lints]
workspace = true
