[package]
name = "forge-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
forge-domain = { path = "../forge-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
