[package]
name = "forge-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
forge-domain = { path = "../forge-domain" }
forge-identity = { path = "../forge-identity" }
async-trait = { workspace = true }
thiserror = { workspace = true }
cedar-policy = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
